<resources>
    <string name="app_name">App portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_page_heading">My Nanodegree Apps</string>
    <string name="app1">POPULAR MOVIES</string>
    <string name="app2">STOCK HAWK</string>
    <string name="app3">BUILD IT BIGGER</string>
    <string name="app4">MAKE YOUR APP MATERIAL</string>
    <string name="app5">GO UBIQUITOUS</string>
    <string name="app6">CAPSTONE: MY OWN APP</string>

    <string name="app1_message">This button will launch my Popular Movies project</string>
    <string name="app2_message">This button will launch my Stock Hawk project</string>
    <string name="app3_message">This button will launch my Build it Bigger project</string>
    <string name="app4_message">This button will launch my Make Your App Material  project</string>
    <string name="app5_message">This button will launch my Go Ubiquitous project</string>
    <string name="app6_message">This button will launch my Capstone project</string>
</resources>
